--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "password-keeper-chr-extension",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,9 @@
     "build:watch": "npm run build -- --watch"
   },
   "keywords": [],
-  "author": "",
+  "author": "steven.m.silvestri",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.15.3",
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
@@ -20,9 +19,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
     "babel-preset-stage-3": "^6.17.0",
-    "bootstrap": "^4.0.0-alpha.5",
     "clean-webpack-plugin": "^0.1.14",
-    "clipboard": "^1.5.16",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "eslint": "^3.12.2",
@@ -31,17 +28,11 @@
     "file-loader": "^0.9.0",
     "font-awesome": "^4.7.0",
     "html-webpack-plugin": "^2.24.1",
-    "material-ui": "^0.16.6",
     "node-sass": "^4.1.1",
     "react-redux": "^5.0.1",
-    "react-router": "^3.0.0",
     "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
-    "redux-form": "^6.4.1",
-    "redux-form-material-ui": "^4.1.2",
     "redux-ignore": "^1.2.4",
     "redux-logger": "^2.7.4",
-    "redux-thunk": "^2.1.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
@@ -49,6 +40,10 @@
     "webpack-dev-server": "^1.16.2"
   },
   "dependencies": {
+    "axios": "^0.15.3",
+    "bootstrap": "^4.0.0-alpha.5",
+    "clipboard": "^1.5.16",
+    "material-ui": "^0.16.6",
     "react": "^15.4.1",
     "react-addons-css-transition-group": "^15.4.1",
     "react-dom": "^15.4.1",
