--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "keywords": [],
   "author": "steven.m.silvestri",
-  "license": "ISC",
+  "license": "UNLICENSED",
+  "private" : true,
   "devDependencies": {
     "babel-core": "^6.21.0",
     "babel-eslint": "^7.1.1",
