--- a/manifest.json
+++ b/manifest.json
@@ -1,16 +1,21 @@
 {
-	"manifest_version": 2,
-	"name"            : "Secure Password Generator",
-	"description"     : "Generate secure passwords from easy to remember simple words",
-	"version"         : "0.1",
-	"browser_action"  : {
+	"manifest_version"       : 2,
+	"short_name"             : "Simple Password Assistant",
+	"name"                   : "Simple Password Assistant",
+	"description"            : "Simple Password Assistant helps you use easy to remember passwords as secure passwords",
+	"version"                : "0.2",
+	"browser_action"         : {
 		"default_icon" : "icon.png",
 		"default_popup": "popup.html"
 	},
-	"permissions"     : [
+	"author"                 : "Steven Silvestri <steven.m.silvestri@gmail.com>",
+	"background"             : {
+		"persistent": false
+	},
+	"permissions"            : [
 		"activeTab",
 		"storage",
 		"https://ajax.googleapis.com/"
 	],
-	"content_security_policy" : "script-src 'self' 'unsafe-eval'; object-src 'self'"
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
