--- a/manifest.json
+++ b/manifest.json
@@ -10,9 +10,7 @@
 	},
 	"author"                 : "Steven Silvestri <steven.m.silvestri@gmail.com>",
 	"permissions"            : [
-		"activeTab",
-		"storage",
-		"https://ajax.googleapis.com/"
+		"storage"
 	],
 	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'"
 }
