--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-	"presets" : [
+	"presets": [
 		"react",
 		"es2015",
 		"stage-1"
 	],
-	"plugins" : [
-
+	"plugins": [
+		"transform-async-to-generator",
+		"syntax-async-functions",
+		"transform-regenerator",
+		"transform-runtime"
 	]
 }
